--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -4,6 +4,9 @@
   padding: 20px;
   text-align: center;
   color: $white;
+  @media screen and (max-width: $small) {
+    padding: 20px 15px;
+  }
   a {
     color: $white;
   }
