--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -7,3 +7,8 @@ $black: #000;
 
 //fonts
 $primary-font: "ADLaM Display", cursive;
+
+// breakpoints
+$small: 767px;
+$medium: 992px;
+$large: 1199px;
