--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -3,6 +3,7 @@
 * {
   &::-webkit-scrollbar {
     width: 5px;
+    height: 5px;
   }
 
   /* Track */
@@ -21,6 +22,9 @@ h1 {
   font-weight: 300;
   font-size: 30px;
   line-height: 1.2;
+  @media screen and (max-width: $small) {
+    font-size: 24px;
+  }
 }
 
 h2 {
@@ -34,16 +38,25 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   margin: 0 -10px;
+  @media screen and (max-width: $small) {
+    margin: 0 -5px;
+  }
 }
 
 .col-12 {
   flex: 0 0 100%;
   padding: 0 10px;
+  @media screen and (max-width: $small) {
+    padding: 0 5px;
+  }
 }
 
 .col-6 {
   flex: 0 0 50%;
   padding: 0 10px;
+  @media screen and (max-width: $small) {
+    padding: 0 5px;
+  }
 }
 
 .screen-1-main {
@@ -54,6 +67,11 @@ h2 {
   height: calc(100vh - 90px);
   margin: auto;
   padding: 30px 15px;
+  flex-wrap: wrap;
+  @media screen and (max-width: $large) {
+    height: auto;
+    min-height: calc(100vh - 100px);
+  }
   &__left {
     width: 65%;
     padding: 20px 15px;
@@ -61,12 +79,26 @@ h2 {
     overflow: auto;
     background-color: rgba($secondary-color, 0.05);
     transition: all 0.3s;
+    @media screen and (max-width: $large) {
+      width: 40%;
+    }
+    @media screen and (max-width: $small) {
+      width: 100%;
+      margin-bottom: 20px;
+    }
   }
   &__right {
     width: 35%;
     padding: 0 0 0 30px;
     text-align: center;
     transition: all 0.3s;
+    @media screen and (max-width: $large) {
+      width: 60%;
+    }
+    @media screen and (max-width: $small) {
+      width: 100%;
+      padding: 0;
+    }
     h1 {
       margin-bottom: 10px;
     }
@@ -87,6 +119,13 @@ h2 {
     }
     .screen-1-main__right {
       width: 50%;
+      padding-left: 0;
+      @media screen and (max-width: $large) {
+        width: 80%;
+      }
+      @media screen and (max-width: $small) {
+        width: 100%;
+      }
     }
   }
 }
