--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -6,7 +6,7 @@
   text-transform: uppercase;
   font-size: 16px;
   border-radius: 0;
-  padding: 15px 20px;
+  padding: 15px;
   cursor: pointer;
   border: 0;
   letter-spacing: 0.3px;
@@ -19,23 +19,21 @@
   &:before {
     position: absolute;
     top: 0;
-    left: 50%;
+    left: 0%;
     content: "";
     width: 100%;
     height: 100%;
     z-index: 0;
-    transform: translateX(-50%);
     transition: width 0.3s;
   }
   &::after {
     position: absolute;
     top: 0;
-    left: 50%;
+    left: 0%;
     content: "";
     width: 0%;
     height: calc(100% - 4px);
     z-index: 0;
-    transform: translateX(-50%);
     border: 2px solid;
     transition: width 0.3s;
   }
@@ -48,6 +46,9 @@
     &:after {
       width: calc(100% - 4px);
     }
+  }
+  svg {
+    margin-left: 5px;
   }
   span {
     position: relative;
@@ -75,6 +76,18 @@
     }
     &:hover {
       color: $primary-color;
+    }
+  }
+  &.link-btn {
+    background-color: transparent;
+    padding: 0;
+    color: $white;
+    &:before,
+    &:after {
+      display: none;
+    }
+    svg {
+      margin-right: 5px;
     }
   }
 }
