--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,20 +1,32 @@
 @import "./variables.scss";
 .footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
   background-color: $secondary-color;
   padding: 20px;
   text-align: center;
   color: $white;
-  @media screen and (max-width: $small) {
+  @media screen and (max-width: $medium) {
     padding: 20px 15px;
   }
-  a {
-    color: $white;
+  @media screen and (max-width: $small) {
+    padding: 15px 5px;
   }
-  &__top {
+  @media screen and (max-height: 375px) {
+    display: none;
+  }
+  &__text {
     font-size: 16px;
-    padding-bottom: 10px;
-  }
-  &__bottom {
-    font-size: 14px;
+    line-height: 1.2;
+    @media screen and (max-width: $small) {
+      font-size: 14px;
+    }
+    color: $white;
+    a {
+      color: $white;
+    }
   }
 }
