--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,5 +1,14 @@
 @import "./variables.scss";
 header {
   background-color: $primary-color;
-  padding: 20px;
+  padding: 15px;
+  .header-main {
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+  }
+  .back-to-screen-1 {
+    max-width: 250px;
+    padding: 0 15px;
+  }
 }
