--- a/src/scss/settings-popup.scss
+++ b/src/scss/settings-popup.scss
@@ -19,24 +19,27 @@
       justify-content: center;
       position: relative;
       .pseudo-checkbox {
-        border: 1px solid $black;
-        width: 20px;
-        height: 20px;
+        border: 3px solid $secondary-color;
+        width: 25px;
+        height: 25px;
         display: inline-block;
         position: absolute;
         left: 0;
         display: flex;
         align-items: center;
         justify-content: center;
-        img {
+        margin-right: 5px;
+        border-radius: 50%;
+        svg {
+          color: $secondary-color;
           opacity: 0;
-          margin-left: 8px;
-          margin-bottom: 8px;
+          width: 100%;
+          height: 100%;
         }
       }
       &.checked {
         .pseudo-checkbox {
-          img {
+          svg {
             opacity: 1;
           }
         }
@@ -80,7 +83,7 @@
       }
       .actual-value {
         color: $primary-color;
-        font-size: 30px;
+        font-size: 25px;
         text-align: center;
         font-weight: 600;
         width: 110px;
