--- a/src/scss/stage.scss
+++ b/src/scss/stage.scss
@@ -12,11 +12,11 @@
     height: 100%;
     width: 100%;
     overflow: hidden;
-    border: 1px solid $primary-color;
+    border: 1px solid $white;
     .grid-item {
-      background-color: $white;
-      border: 1px solid $primary-color;
-      color: $secondary-color;
+      background-color: $secondary-color;
+      border: 1px solid $white;
+      color: $white;
       display: flex;
       align-items: center;
       justify-content: center;
